installed socketio dependency

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "ws"
   ],
   "author": "blac",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "socket.io": "^4.6.1"
+  }
 }
