--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "blac",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "express": "^4.18.2"
   }
 }
