--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "blac",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^4.6.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1"
   }
 }
